<resources>
    <string name="app_name">ChatFirebase</string>
    <string name="action_logout">Log out</string>

    <!-- Pantallas de autenticación -->
    <string name="login_title">Bienvenido de vuelta</string>
    <string name="login_subtitle">Inicia sesión para empezar a chatear</string>
    <string name="register_title">Crear Cuenta</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar contraseña </string>
    <string name="helper_password">La contraseña debe tener al menos 6 caracteres</string>
    <string name="action_login">Iniciar Sesión</string>
    <string name="action_register">Registrar</string>
    <string name="action_go_to_register">Crea una cuenta</string>
    <string name="action_go_to_login">Ya tienes una cuenta? Inicia sesión</string>

    <!-- Para los errroes de autenticación -->
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_email_invalid">Email inválido</string>
    <string name="error_password_short">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_password_mismatch">La contraseña no concuerda</string>
    <string name="error_password_weak">La contraseña es muy débil</string>
    <string name="error_email_in_use">Ya hay una cuenta con este correo</string>
    <string name="error_invalid_credentials">Correo o contraseña incorrectos</string>
    <string name="error_network">Sin conexión a internet. Intenta de nuevo más tarde.</string>
    <string name="error_too_many_requests">Muchos intentos. Intenta de nuevo más tarde.</string>
    <string name="error_profile_save">La cuenta ha sido creada, pero hubo un error al guardar el perfil. Inicie sesión de nuevo.</string>
    <string name="error_auth_generic">Algo salió mal. Intente de nuevo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Contactos</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="nav_chats">Chats</string>
    <string name="nav_contacts">Contactos</string>
    <string name="nav_profile">Perfil</string>

    <string name="chats_empty_title">Todavía no tienes chats</string>
    <string name="chats_empty_message">Cuando inicies una conversación, aparecerá aquí.</string>

    <string name="contacts_empty_title">Todavía no hay otros usuarios</string>
    <string name="contacts_empty_message">Cuando alguien más se registre, aparecerá aquí.</string>

    <!-- Notificaciones -->
    <string name="notification_channel_id" translatable="false">messages</string>
    <string name="notification_channel_name">Mensajes</string>
    <string name="notification_channel_description">Avisos de mensajes nuevos</string>
    <string name="notification_default_title">Nuevo mensaje</string>

</resources>