<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/chatsFragment">

    <!-- Un destino por pestaña; los ids coinciden con los de bottom_nav_menu. -->
    <fragment
        android:id="@+id/chatsFragment"
        android:name="com.example.chatfirebase.ui.chats.ChatsFragment"
        android:label="@string/nav_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.example.chatfirebase.ui.contacts.ContactsFragment"
        android:label="@string/nav_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.chatfirebase.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
